syntax = "proto3";

package t2;

option go_package = "./proto_buffer";

service ProductService {
    rpc CreaterProduct(ProductRequest) returns (ProductResponse) { }
}

message ProductRequest { 
    string id = 1;
    string name = 2;
    float price = 3;
    int64 quantity = 4;
}

message ProductResponse { 
    int64 status = 1;
    string description = 2;
}